[package]
name = "data_forest"
version = "0.1.2"
edition = "2024"
description = "Implementation of various types of trees."
license = "MIT"
authors = ["Anton Anisimov <anisimov.anton.main@gmail.com>"]
repository = "https://github.com/anisimov-anthony/data_forest"
documentation = "https://docs.rs/data_forest"
homepage = "https://github.com/anisimov-anthony/data_forest"
readme = "README.md"
keywords = [
    "data-structures",
    "tree",
    "search-tree",
    "balanced-tree",
    "algorithm",
]
categories = [
    "algorithms",
    "data-structures",
    "science"
]

[dependencies]
bst-rs = "0.1.0" # Generates data with which the outputs of the tested functions are compared in assertions (during prop testing).

[dev-dependencies]
proptest = "1.7.0"
rand = "0.9"

